WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244811
CoordinatedGraphics: fix includes when COORDINATED_GRAPHICS is not set
https://bugs.webkit.org/show_bug.cgi?id=244811
Summary
CoordinatedGraphics: fix includes when COORDINATED_GRAPHICS is not set
Thomas Devoogdt
Reported
2022-09-05 07:50:23 PDT
The LayerTreeHost.cpp is not compiled if COORDINATED_GRAPHICS the flag is not set. So put the usage of it behind the same flag.
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2022-09-07 02:33:50 PDT
Committed
254220@main
(f06201ca8513): <
https://commits.webkit.org/254220@main
> Reviewed commits have been landed. Closing PR #4035 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2022-09-07 02:34:18 PDT
<
rdar://problem/99641487
>
Fujii Hironori
Comment 3
2022-09-07 03:29:11 PDT
***
Bug 232934
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2022-12-15 12:48:42 PST
Committed
257953@main
(6e6102ab52c5): <
https://commits.webkit.org/257953@main
> Reviewed commits have been landed. Closing PR #7491 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug