CoordinatedGraphics: fix includes when COORDINATED_GRAPHICS is not set

https://bugs.webkit.org/show_bug.cgi?id=244811

Reviewed by Fujii Hironori.

COORDINATED_GRAPHICS is not set if USE_OPENGL_OR_ES=OFF

- Forward declare CoordinatedGraphicsLayer, the header will be
  included in CompositingCoordinator if COORDINATED_GRAPHICS is set.

- The LayerTreeHost.cpp is not compiled if the COORDINATED_GRAPHICS
  flag is not set, so extend the mocked function list.

Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>

Canonical link: https://commits.webkit.org/254220@main